[gd_scene load_steps=9 format=3 uid="uid://ufrm7hrm34xu"]

[ext_resource type="Script" path="res://scripts/somestory.gd" id="1_m64y1"]

[sub_resource type="Animation" id="Animation_51tks"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lbvcc"]
resource_name = "trans"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prxrf"]
_data = {
"RESET": SubResource("Animation_51tks"),
"trans": SubResource("Animation_lbvcc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wqe16"]
size = Vector2(1460, 860)

[sub_resource type="Animation" id="Animation_q7bp0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p7dl5"]
resource_name = "end_trans"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2iwed"]
_data = {
"RESET": SubResource("Animation_q7bp0"),
"end_trans": SubResource("Animation_p7dl5")
}

[node name="somestory" type="Node2D"]
script = ExtResource("1_m64y1")

[node name="onreadystart" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="onreadystart"]
libraries = {
"": SubResource("AnimationLibrary_prxrf")
}

[node name="ColorRect" type="ColorRect" parent="onreadystart/AnimationPlayer"]
offset_left = -23.0
offset_top = -37.0
offset_right = 1207.0
offset_bottom = 676.0

[node name="story" type="Label" parent="."]
offset_left = 314.0
offset_top = 50.0
offset_right = 816.0
offset_bottom = 593.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "test label

test label

test label 

test label test label test label test label test label test label 

hi"

[node name="trans_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="next_scene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_scene"]
position = Vector2(597, 322)
shape = SubResource("RectangleShape2D_wqe16")
debug_color = Color(0.8, 0.411765, 0.254902, 0.419608)

[node name="finish_end" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="finish_end"]
libraries = {
"": SubResource("AnimationLibrary_2iwed")
}

[node name="ColorRect" type="ColorRect" parent="finish_end/AnimationPlayer"]
offset_left = -7.0
offset_top = -11.0
offset_right = 1172.0
offset_bottom = 663.0
color = Color(1, 1, 1, 0)

[connection signal="timeout" from="trans_timer" to="." method="_on_trans_timer_timeout"]
[connection signal="mouse_entered" from="next_scene" to="." method="_on_next_scene_mouse_entered"]
